--- a/main.html
+++ b/main.html
@@ -10,7 +10,27 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<table border="1">
+        <caption>Student Details</caption>
+        <thead>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Branch</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Shaw
+                </td>
+                <td>20</td>
+                <td>CSE</td>
+            </tr>
+            <tr>
+                <td>Adil</td>
+                <td>21</td>
+                <td>ECE</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 
 </html>
